--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
 
         </section>
 
+        <div class="bg-[#FF9C7F]">
+
         <section class="bg-[#FF9C7F] flex items-center justify-center mb-[50px]">
 
             <div class="bg-[#FFFFFF] w-[1376px] h-[780px] rounded-[24px] flex flex-col items-center justify-center mt-[81px] gap-[30px]">
@@ -553,6 +555,8 @@
 
 
         </section>
+
+        </div>
 
         <section>
 
