--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 
             </div>
 
-            <div>
+            <div class="flex flex-col gap-4 items-center">
 
                 <h3 class="text-[24px] text-[#2E2A42]">Get the App</h3>
 
