--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <section class="flex flex-col items-center gap-[50px] mt-25 mb-[84px]">
 
-            <h3 class="text-[36px]">
+            <h3 class="text-[36px] text-center">
                 Parenting isn't one-size-fits-all. <br>
                 Your support shouldn't be, either.
             </h3>
@@ -125,7 +125,7 @@
 
             <div class="w-ful h-[632px] mt-[16px] bg-[#D7BEFC] mx-[16px] rounded-[24px] flex flex-col items-center pt-[77px]">
 
-                <h3 class="text-[37px] pb-[45px]">
+                <h3 class="text-[37px] text-center pb-[45px]">
                     What Parenting Superpower <br>
                     Do You Need Today?
                 </h3>
@@ -202,7 +202,7 @@
 
         <section class="mt-[137px] flex flex-col items-center gap-10">
 
-            <h3 class="text-[37px]">
+            <h3 class="text-[37px] text-center">
                 Here's How Real Users <br>
                 Talk to Riley:
             </h3>
@@ -266,14 +266,14 @@
 
             <h3 class="text-[56px] text-[#2E2A42] mt-[80px] flex justify-center items-center mb-[60px]">How Riley Works</h3>
 
-            <div class="flex justify-around px-[50px]">
+            <div class="flex justify-around px-[50px] gap-13">
 
                 <div class="flex flex-col items-center gap-[37px]">
 
                     <div class="flex flex-col items-center gap-[6px]">
                         <img class="w-[214px] h-[195px]" src="imagefolder/drop.svg" alt="">
 
-                        <p class="text-[#2E2A42] text-[23px]">
+                        <p class="text-[#2E2A42] text-[23px] text-center">
                             Built on science <br>    
                             that matters
                         </p>
@@ -295,7 +295,7 @@
                     <div class="flex flex-col items-center gap-[6px]">
                         <img class="w-[214px] h-[195px]" src="imagefolder/trangle.svg" alt="">
 
-                        <p class="text-[#2E2A42] text-[23px]">
+                        <p class="text-[#2E2A42] text-[23px] text-center">
                             Powered by tech that learns <br>
                             and grows with you
                         </p>
@@ -316,7 +316,7 @@
                     <div class="flex flex-col items-center gap-[6px]">
                         <img class="w-[214px] h-[195px]" src="imagefolder/star.svg" alt="">
 
-                        <p class="text-[#2E2A42] text-[23px]">
+                        <p class="text-[#2E2A42] text-[23px] text-center">
                             Clarity without ignoring <br>
                             your individuality
                         </p>
@@ -441,11 +441,11 @@
 
             <div class="bg-white w-[1376px] h-[1162px] rounded-[24px] flex flex-col justify-center items-center gap-10"> 
 
-                <p class="text-[20px]">Designed with Real Parents in Mind</p>
+                <p class="text-[20px] mt-9">Designed with Real Parents in Mind</p>
 
                 <h3 class="text-[38px] text-[#2E2A42]">Why Riley Stands Out</h3>
 
-                <p class="text-[15px] text-[#364153] mb-[73px] text-center">
+                <p class="text-[15px] text-[#364153] mb-[33px] text-center">
                     See how Riley outshines other parenting tools with <br>
                     intelligent features and tailored advice. It’s theone- <br>
                     stop-shop  for all your parenting needs! 
