--- a/index.html
+++ b/index.html
@@ -804,6 +804,9 @@
                 </div>
 
             </div>
+
+            <button class="bg-[#5934C5] w-[223px] h-[56px] font-bold text-white rounded-[32px] mt-[64px]">Explore the blog</button>
+
         </section>
 
         <section class="flex flex-col justify-center items-center">
@@ -815,7 +818,7 @@
                 of confident parents.
             </h3>
 
-            <button class="bg-[#5934C5] text-white font-bold w-[289px] h-[56px] rounded-[32px] absolute top-2600">Get support that gets you</button>
+            <button class="bg-[#5934C5] text-white font-bold w-[289px] h-[56px] rounded-[32px] absolute top-2640">Get support that gets you</button>
 
             <img class="w-[680px] h-[192px] mb-[88px]" src="imagefolder/Mascots.png" alt="">
 
@@ -827,7 +830,7 @@
 
             <p class="text-[20px]">Stay in the loop with Riley's newsletter.</p>
              <input class="rounded-[40px] w-[343px] h-[62px] p-4 mt-[24px]" placeholder="Email" type="text">
-             <button class="bg-[#5934C5] text-white w-[116px] h-[62px] rounded-[78px] absolute left-67 top-2699">Sign in</button>
+             <button class="bg-[#5934C5] text-white w-[116px] h-[62px] rounded-[78px] absolute left-67 top-2735.5">Sign in</button>
 
             </div>
 
@@ -854,7 +857,7 @@
                 <img src="imagefolder/Link → SVG.svg" alt="">
             </div>
 
-            <div class="flex flex-col gap-5 pb-10 absolute right-177 top-2730">
+            <div class="flex flex-col gap-5 pb-10 absolute right-177 top-2770">
                 <img class="w-[118px] h-[76px]" src="imagefolder/last-SVG.svg" alt="">
 
                 <img class="w-[83px] h-[16px]" src="imagefolder/© 2025 Riley.svg" alt="">
